kubectl_deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chaps-dev-ingress
  namespace: chaps-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 188.214.15.75/32, 192.168.5.101/32,92.177.120.49/32,81.134.202.29/32,79.152.189.104/32,179.50.12.212/32,188.172.252.34/32,194.33.192.0/25,194.33.193.0/25,194.33.196.0/25,194.33.197.0/25,195.59.75.0/24,201.33.21.5/32,213.121.161.112/28,52.67.148.55/32,54.94.206.111/32,178.248.34.42/32,178.248.34.43/32,178.248.34.44/32,178.248.34.45/32,178.248.34.46/32,178.248.34.47/32,89.32.121.144/32,185.191.249.100/32,2.138.20.8/32
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "<html> <head> <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'></head><body> <div class='container'> <div class='content'> <div class='title'>You are not authorised to access this application</div> </div></div></body></html>";
      }
      error_page 403 @custom_403;
    external-dns.alpha.kubernetes.io/set-identifier: chaps-dev-ingress-chaps-dev-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  tls:
  - hosts:
    - dev.chaps.apps.live.cloud-platform.service.justice.gov.uk
    secretName: chaps-dev-cert-secret
  rules:
  - host: dev.chaps.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: dotnet-service
          servicePort: 5010
